# clippy_rust

./: .gitignore  Cargo.toml  README.md
src/lib/data/: mod.rs  model.rs  query.rs
src/lib/domain/: time.rs
src/lib/domain/clip/: mod.rs
src/lib/domain/clip/field/: content.rs  expires.rs  hits.rs  mod.rs  password.rs  shortcode.rs  title.rs
src/lib/service/: ask.rs  mod.rs
src/lib/web/: ctx.rs  mod.rs  renderer.rs
templates/: base.hbs  footer.hbs  header.hbs
