[package]
name = "clipstash"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clipstash"
path = "src/lib/mod.rs"

[dependencies]
serde =  { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
chrono = {version = "0.4.31", features = ["serde"]}
uuid = {version = "1.5.0", features = ["serde", "v4"]}
derive_more = "0.99.17"