[package]
name = "clippy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clippy"
path = "src/lib/mod.rs"

[dependencies]
serde =  { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
chrono = { version = "0.4.31", features = ["serde"]}
uuid = { version = "1.5.0", features = ["serde", "v4"]}
derive_more = "0.99.17"
rand = "0.8.5"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono", "uuid"]}
